Bug 1407069 - Associate epochs to async image updates. r=sotaro